# bookit

./: .gitignore  README.md
backend/: pyproject.toml
www/: bun.lockb  package.json
