[tool.poetry]
name = "bookit - backend"
version = "0.1.0"
description = ""
authors = ["codebyaadi <adityastar57@gmail.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
